[package]
authors = ["David Peter <mail@david-peter.de>"]
build = "build.rs"
categories = ["command-line-utilities"]
description = "fd is a simple, fast and user-friendly alternative to find."
exclude = ["/benchmarks/*"]
homepage = "https://github.com/sharkdp/fd"
documentation = "https://docs.rs/fd-find"
keywords = [
    "search",
    "find",
    "file",
    "filesystem",
    "tool",
]
license = "MIT OR Apache-2.0"
name = "fd-find"
readme = "README.md"
repository = "https://github.com/sharkdp/fd"
version = "10.2.0"
edition= "2021"
rust-version = "1.77.2"

[badges.appveyor]
repository = "sharkdp/fd"

[badges.travis-ci]
repository = "sharkdp/fd"

[[bin]]
name = "fd"
path = "src/main.rs"

[build-dependencies]
version_check = "0.9"

[dependencies]
aho-corasick = "1.1"
nu-ansi-term = "0.50"
argmax = "0.4.0"
ignore = "0.4.23"
regex = "1.11.1"
regex-syntax = "0.8"
ctrlc = "3.4"
globset = "0.4"
anyhow = "1.0"
etcetera = "0.10"
normpath = "1.1.1"
crossbeam-channel = "0.5.15"
clap_complete = {version = "4.5.55", optional = true}
faccess = "0.2.4"
jiff = "0.2.14"
# For now, pin the `home` crate to less than 0.5.11, to ensure it works on older versions of rust
# TODO: when we upgrade past rust 1.85, remove this dependency
home = "=0.5.9"

[dependencies.clap]
version = "4.5.42"
features = ["suggestions", "color", "wrap_help", "cargo", "derive"]

[dependencies.lscolors]
version = "0.20"
default-features = false
features = ["nu-ansi-term"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", default-features = false, features = ["signal", "user", "hostname"] }

[target.'cfg(all(unix, not(target_os = "redox")))'.dependencies]
libc = "0.2"

# FIXME: Re-enable jemalloc on macOS
# jemalloc is currently disabled on macOS due to a bug in jemalloc in combination with macOS
# Catalina. See https://github.com/sharkdp/fd/issues/498 for details.
# This has to be kept in sync with src/main.rs where the allocator for
# the program is set.
[target.'cfg(all(not(windows), not(target_os = "android"), not(target_os = "macos"), not(target_os = "freebsd"), not(target_os = "openbsd"), not(target_os = "illumos"), not(all(target_env = "musl", target_pointer_width = "32")), not(target_arch = "riscv64")))'.dependencies]
tikv-jemallocator = {version = "0.6.0", optional = true}

[dev-dependencies]
diff = "0.1"
tempfile = "3.20"
filetime = "0.2"
test-case = "3.3"

[profile.release]
lto = true
strip = true
codegen-units = 1

[features]
use-jemalloc = ["tikv-jemallocator"]
completions = ["clap_complete"]
base = ["use-jemalloc"]
default = ["use-jemalloc", "completions"]
